syntax = "proto3";
option go_package = "grpc/ms/pb";

service MyService {
    rpc AddItem(ItemRequest) returns (ItemResponse) {}
}

message ItemRequest {
    string name = 1;
}

message ItemResponse {
    int64 id = 1;
    string name = 2;
}
